--- a/frontend/src/assets/style.less
+++ b/frontend/src/assets/style.less
@@ -32,13 +32,14 @@ input {
 input[type="text"] {
     color: #fff;
     background-color: #0000;
-    border: 1px #262440 solid;
+    border: 1px #fff8 solid;
     border-radius: 0.2rem;
-}
 
-input[type="text"]:hover input[type="text"]:active,
-input[type="text"]:focus {
-    border: 1px solid #4bbbef;
+    &:hover,
+    &:active,
+    &:focus {
+        border: 1px solid #4bbbef;
+    }
 }
 
 ::-webkit-scrollbar {
