--- a/frontend/src/assets/style.less
+++ b/frontend/src/assets/style.less
@@ -7,6 +7,7 @@
     font-family: "Montserrat";
 }
 
+p,
 h1,
 h2,
 h3,
@@ -19,6 +20,10 @@ span {
     padding: 0.5em;
     border-radius: 0.5em;
     margin: 1em;
+}
+
+html,body,#app {
+    margin: 0;
 }
 
 body {
@@ -81,4 +86,8 @@ input[type="text"] {
 * {
     scrollbar-width: thin;
     scrollbar-color: #5abeed #14131c;
+}
+
+body {
+    overflow-x: hidden;
 }
